2006-07-18  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: "cd" to source directory.

2006-06-29  Nurdin Premji  <npremji@redhat.com>

	* .settings/org.eclipse.jdt.ui.prefs: Ditto.
	* .settings/org.eclipse.jdt.core.prefs: Added for gnu formatting in eclipse
	based on Tom Tromey's formatter.

2006-06-09  Nurdin Premji  <npremji@redhat.com>

	* .cvsignore: Ignoring
	compile
	depcomp

2006-06-09  Nurdin Premji  <npremji@redhat.com>

	* .externalToolBuilders/Create Bin dir.launch: Fixed
	* .externalToolBuilders/Cleaner.launch: Fixed

2006-06-09  Nurdin Premji  <npremji@redhat.com>

	* .externalToolBuilders/Create Bin dir.launch: Builder that creates a bin 
	directory if it doesn't exist

2006-06-08  Nurdin Premji  <npremji@redhat.com>

	* .externalToolBuilders/Make.launch: Builder that runs make in frysk/bin
	directory.
	* .externalToolBuilders/Make Check.launch: Builder that runs make check
	in frysk/bin directory
	* .externalToolBuilders/Cleaner.launch: Builder that cleans the frysk/bin 
	directory
	* .externalToolBuilders/Autogen.sh.launch: Builder that runs autogen
	script in frysk/bin directory
	* .project: Added external builders to build in eclipse.

2006-05-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* .classpath: Eclipse project settings file.
	* .project: Ditto

2006-05-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add bootstrap.sh.

2006-04-27  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: Rename autogen.sh.
	* autogen.sh: New, run both bootstrap.sh and configure.

2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (javadoc): Add -link to
	http://developer.classpath.org/doc/, and
	http://java-gnome.sourceforge.net/docs/javadoc/.
	(PACKAGE_LIST): Delete.
	
2006-01-21  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Delete EXCEPTION.
	* EXCEPTION: Delete, moved to common/.

2006-01-16  Rick Moseley  <rmoseley@redhat.com>

	* Moved frysk,desktop to ./frysk-gui.
