@@ -30,6 +30,8 @@
           <a href="build/">Build</a>
           &nbsp;|&nbsp;
           <a href="documentation/">Documentation</a>
+	  &nbsp;|&nbsp;
+	  <a href="developers/">Developers</a>
         </td>
       </tr>
     </table>
